--- a/k8s-nginx-php-fpm/Dockerfile.nginx
+++ b/k8s-nginx-php-fpm/Dockerfile.nginx
@@ -1,6 +1,9 @@
-FROM nginx:alpine
+FROM nginx
 
 LABEL maintainer="Lex Lee <bg5hfc@gmail.com>"
+
+RUN apt-get update \
+  && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime 
 
 COPY nginx.conf /etc/nginx/nginx.conf
 
